# deFeNEStrate

./: .gitignore  Cargo.toml  README.md
src/: databus.rs  emulator.rs  lib.rs  main.rs  structs.rs  ui.rs
src/devices/: bus.rs  cartridge.rs  cpu.rs  instr_decode.rs  mod.rs  nes.rs  ppu.rs  ram.rs  structs.rs
src/utils/: decode.rs  ines.rs  mod.rs  structs.rs
static/: index.html
tests/: bus.rs  nestest.rs
tests/util/: logparse.rs  provider.rs
