# [package]
# name = "defenestrate"
# version = "0.1.0"
# authors = ["Joe Quigley <quigley.joseph@outlook.com>"]
# edition = "2018"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# bitflags = "1.0"
# quicksilver = { version = "0.3.19", default-features = false, features = ["fonts"] }

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# stdweb = "0.4.19"

[workspace]
members = ["packages/*"]
# The web front-end is an NPM package
exclude = ["packages/defenestrate-web", "packages/__generated_code"]
